--- a/api/package.json
+++ b/api/package.json
@@ -14,7 +14,6 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "mongoose": "^5.9.2"
   }
 }
