--- a/api/package.json
+++ b/api/package.json
@@ -1,11 +1,18 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "description": "API",
-  "main": "index.js",
+  "description": "Node.js + MongoDB: JWT Authentication & Authorization",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "node.js",
+    "express",
+    "jwt",
+    "authentication",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
